--- a/style_cart.css
+++ b/style_cart.css
@@ -102,6 +102,7 @@ nav svg{
     gap: 1vi;
     column-gap: 1vi;
     align-content: center;
+    border: 0.1vi solid #0c0fc5;
     margin-top: 24vi;
     padding: 2vi;
     padding-top: 10vi;
@@ -218,6 +219,6 @@ img{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     grid-column: 1/1;
     color: #0033a0;
-    bottom: 20vi;
+    margin-bottom: 0vi;
     position: absolute;
 }
